[gd_scene load_steps=8 format=3 uid="uid://xtqst0tpaoeo"]

[ext_resource type="Script" path="res://Assets/Scripts/Characters/KetchupSmall/ketchup_small.gd" id="1_if1ed"]
[ext_resource type="Texture2D" uid="uid://bovmxttgxhpmq" path="res://Assets/Resources/Textures/ketchup_small.png" id="2_a1yxx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7no7e"]
radius = 0.365421
height = 1.24052

[sub_resource type="Animation" id="Animation_pplyi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_a1yxx")]
}

[sub_resource type="Animation" id="Animation_ddgbw"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_a1yxx")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_28th3"]
_data = {
"RESET": SubResource("Animation_pplyi"),
"idle": SubResource("Animation_ddgbw")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rje8y"]
height = 2.27576
radius = 5.33023

[node name="KetchupSmall" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_if1ed")

[node name="Sprite3D" type="Sprite3D" parent="."]
texture = ExtResource("2_a1yxx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0125324, 0)
shape = SubResource("CapsuleShape3D_7no7e")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.11, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_28th3")
}
autoplay = "idle"

[node name="IdleTimer" type="Timer" parent="."]

[node name="VisibleArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisibleArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.476054, 0)
shape = SubResource("CylinderShape3D_rje8y")

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="body_entered" from="VisibleArea" to="." method="_on_visible_area_body_entered"]
